--- a/Projects/Certification Project 2 - Tribute Page/index.html
+++ b/Projects/Certification Project 2 - Tribute Page/index.html
@@ -26,9 +26,44 @@
         <section id="tributeInfo">
           <h3 id="headline">Here's a list of multimedia content that he was a part of as a voice actor:</h3>
           <ul>
-            <li><strong>2008</strong> - Sukippu bîto! as Imai</li>
-            <li><strong>2010</strong> - The Party Record as Hutch</li>
-            <li><strong>2011</strong> - Rio: Rainbow Gate as an additional voice</li>
+            <div class="data"> 
+              <li>
+                  <strong>2008 <a href="https://www.imdb.com/title/tt1329466/">(IMBD)</a></strong> - <a href="#!" id="first">Sukippu bîto!</a> as <a href="#!" id="second">Imai</a>
+              </li>
+              <div title="Title Data"> 
+                <img src="assets/va1.jpg" alt="Sukippu bîto! cover"></img>
+                <p> Genres: Animation Comedy Drama Romance </p>
+                <p> Keywords: acting, actress, dream, shoujo, based on comic book, showbiz drama, love, revenge, childhood friend, tokyo japan, success, stardom, showbiz, devotion, betrayal, anime</p>
+                <p>The girl Kyoko Mogami lives alone in an apartment with her big love the childhood friend Sho Fuwa. He is a big music star and has many fans. 
+                  One day he breaks up with her telling her she is a plain woman, and the only reason he stayed with her all this time was so she could wash his clothes and pay his rent. 
+                  Kyoko swears to never love again and take revenge on Sho by entering showbusiness and becoming a much bigger star than him. 
+                  Getting into showbusiness proves to be more challenging than she thought but on her way she meets curious and interesting people and a new life begins.</p>
+              </div>
+              <div title="Title Voice Actor Data"> <p>Stuff</p> </div>
+              <li>
+                  <strong>2008 <a href="https://www.imdb.com/title/tt1329466/">(IMBD)</a></strong> - <a href="#!" id="first">Sukippu bîto!</a> as <a href="#!" id="second">Imai</a>
+              </li>
+              <div title="Title Data"> 
+                <img src="assets/va1.jpg" alt="Sukippu bîto! cover"></img>
+                <p> Genres: Animation Comedy Drama Romance </p>
+                <p> Keywords: acting, actress, dream, shoujo, based on comic book, showbiz drama, love, revenge, childhood friend, tokyo japan, success, stardom, showbiz, devotion, betrayal, anime</p>
+                <p>The girl Kyoko Mogami lives alone in an apartment with her big love the childhood friend Sho Fuwa. He is a big music star and has many fans. 
+                  One day he breaks up with her telling her she is a plain woman, and the only reason he stayed with her all this time was so she could wash his clothes and pay his rent. 
+                  Kyoko swears to never love again and take revenge on Sho by entering showbusiness and becoming a much bigger star than him. 
+                  Getting into showbusiness proves to be more challenging than she thought but on her way she meets curious and interesting people and a new life begins.</p>
+              </div>
+              <div title="Title Voice Actor Data"> <p>Stuff</p> </div>
+            </div>
+
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
+            <li><strong>2016</strong> - </li>
           </ul>
 
 
