--- a/Projects/Certification Project 2 - Tribute Page/index.html
+++ b/Projects/Certification Project 2 - Tribute Page/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="assets/favicon.png">
   </head>
 
+
   <body>
     <main id="main">
       <h1 id="title">Nathan Sharp</h1>
@@ -30,8 +31,8 @@
                 <li>
                   <strong>2015 <a href="https://open.spotify.com/album/4Ptx0OQ3pjBa8Up5sxTcgQ">(Spotify)</a></strong> ~ <a href="#!" class="albumData">Mangled</a> ~ 
                   <audio id="songPlayer" src="assets/chain.mp3"></audio>
-                  <button class="mcPlayer" onclick="document.getElementById('songPlayer').play()">Play</button>
-                  <button class="mcPlayer" onclick="document.getElementById('songPlayer').pause()">Pause</button>
+                  <button class="mcPlayer" onclick="document.getElementById('songPlayer').play()"><img src="assets/buttonPlay.png" alt="Play Button" class="mcPlayerImg"></img></button>
+                  <button class="mcPlayer" onclick="document.getElementById('songPlayer').pause()"><img src="assets/buttonPause.png" alt="Pause Button" class="mcPlayerImg"></img></button>
                 </li>
             </ul>
           </section>
