--- a/Projects/Certification Project 2 - Tribute Page/index.html
+++ b/Projects/Certification Project 2 - Tribute Page/index.html
@@ -37,6 +37,8 @@
             </ul>
           </section>
 
+<!-- TO DO: Separate album cover data in divs -->
+
           <section id="musicalContent">
             <h3 id="headline" class="lineHr">Here's a list of albums he's created</h3>
             <ul class="mcData">
